# advent-of-code

./: .gitignore  Cargo.toml  README.md  aoc.py  init.py  requirements.txt  tmp
.github/workflows/: ci.yml  readme-stars.yml
2018/1/: code.py
2018/10/: code.py
2018/11/: code.py
2018/12/: code.py
2018/14/: statement.html
2018/16/: code.py
2018/19/: code.py
2018/2/: code.py
2018/20/: code.py
2018/21/: code.py
2018/22/: code.py
2018/24/: code.py
2018/3/: code.py
2018/4/: code.py
2018/5/: code.py
2018/6/: code.py
2018/7/: code.py
2018/8/: code.py
2018/9/: code.py
2019/src/: day10.rs  day12.rs  day14.rs  day16.rs  day2.rs  day21.rs  day25.rs  day4.rs
2020/: run.py  template.py
2020/1/: code.py
2020/10/: code.py
2020/11/: code.py
2020/12/: statement.html
2020/13/: code.py
2020/14/: code.py
2020/15/: code.py
2020/16/: code.py
2020/17/: code.py  statement.html
2020/2/: code.py
2020/20/: test_code.py
2020/23/: code.py  statement.html
2020/25/: code.py
2020/4/: code.py
2020/5/: code.py
2020/6/: statement.html
2020/7/: code.py  statement.html
2020/8/: statement.html
2020/9/: code.py  statement.html
2020/utils/: __init__.py  utils.py
2021/: init.py  run.py
2021/1/: code.py
2021/10/: code.py
2021/11/: code.py
2022/: Cargo.toml
2023/: Cargo.toml  README.md
2023/src/: helpers.rs  lib.rs
2024/: Cargo.toml  README.md
src/: day1.rs  day10.rs  day18.rs  day2.rs  day20.rs  day22.rs  day23.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  main.rs
y2021/: requirements.txt
(+130 files in other folders)
