[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["tommassino"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
regex = "1.3.1"
chrono = "0.4.10"
itertools = "0.8.2"
rulinalg = "0.4.2"
permutohedron = "0.2.4"
num = "0.2.0"
