[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Tomas Witzany"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
log = "0.4.20"
env_logger = "0.10.1"
regex = "1.10.2"
#itertools = "0.10.5"
#imageproc = "0.22.0"
#image = "0.23.14"
#queues = "1.1.0"
#num = "0.4.0"
#lazy_static = "1.4.0"
#petgraph = "0.6.2"
